Move files to be properly in file tree
Co-authored-by: Mike Manchee <mikemanchee@gmail.com>
Co-authored-by: Ben Stoller <stollersystemsound@gmail.com>

--- a/Parcel/Views/Parcel/CreateForm.cshtml
+++ b/Parcel/Views/Parcel/CreateForm.cshtml
@@ -1,4 +1,4 @@
-<form action="/parcels" method="post">
+<form action="/parcel" method="post">
   <p>Reciepiant:</p>
   <label for="name">Name:</label>
   <input id="name" name="name" type="text">
