--- a/Parcel/Views/Home/Index.cshtml
+++ b/Parcel/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
 <h1>Welcome to Fudex!</h1>
-<a href='/parcels/new'>Add a new Parcel</a>
-<a href='/parcels'>See list of your parcels</a>
+<a href='/parcel/new'>Add a new Parcel</a>
+<a href='/parcel'>See list of your parcels</a>
