--- a/Parcel/Views/Parcels/CreateForm.cshtml
+++ b/Parcel/Views/Parcels/CreateForm.cshtml
@@ -1,4 +1,4 @@
-<form action="/parcel" method="post">
+<form action="/parcels" method="post">
   <p>Reciepiant:</p>
   <label for="name">Name:</label>
   <input id="name" name="name" type="text">
